@@ -1,6 +1,11 @@
 Apache Tez Change Log
 =====================
 
+Backporting
+
+ALL CHANGES:
+  TEZ-1923. FetcherOrderedGrouped gets into infinite loop due to memory pressure.
+
 Release 0.5.3: 2014-12-10
 
 ALL CHANGES:
